# OTUS_HW11

./: CMakeLists.txt  reducer_1.txt
.github/workflows/: cmake-single-platform.yml
include/: block_reader.h  container_trace.h  file_splitter.h  map_reduce_runner.h  mapper.h  max_summator.h  min_prefix_functions.h  prefix_functors.h  reducer.h  shuffler.h
src/: block_reader.cpp  file_splitter.cpp  main.cpp  min_prefix_function.cpp
test/: test_mapreduce.cpp
tests/: tests.cpp
